--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -84,8 +84,7 @@
 @import "./partials/animations.scss";
 @import "./partials/classes.scss";
 @import "./modal.scss";
-@import "./selectbox.scss";
-@import "./filter.scss";
+@import "./responsive.scss";
 body {
   min-width: 320px;
   font-family: "Inter";
@@ -913,6 +912,7 @@ h2 {
 .productcard {
   max-width: 302px;
   margin: auto;
+  min-width: 302px;
 }
 .productcard__img {
   position: relative;
@@ -1219,6 +1219,9 @@ h2 {
 }
 .productsticker_green {
   background-image: url(../img/badge_new.svg);
+}
+.productsticker_blue {
+  background-image: url(../img/badge_blue.svg);
 }
 
 .productsticker_default {
@@ -2873,7 +2876,7 @@ button {
 .fitchesblock__header {
   display: flex;
   align-items: center;
-  margin-bottom: 21px;
+
   min-height: 60px;
 }
 .fitchesblock__icon {
@@ -2899,7 +2902,7 @@ button {
   font-weight: 400;
   font-size: 16px;
   line-height: 19px;
-
+  margin-top: 21px;
   color: #3a3a3a;
 }
 
@@ -3176,18 +3179,23 @@ input {
   background-size: cover;
 }
 
-.btn__border {
+.btn_border {
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
   line-height: 19px;
   text-align: center;
-  padding: 20px 0;
+  padding: 20px;
   border: 2px solid #08105b;
   border-radius: 15px;
   display: block;
   color: #08105b;
   white-space: nowrap;
+
+  &:hover {
+    color: #fff;
+    background-color: #08105b;
+  }
 }
 
 .btn_default {
@@ -3208,6 +3216,462 @@ input {
   display: none;
 }
 
+.breadcrumbs {
+  margin-bottom: 29px;
+}
+
+.breadcrumbs__items ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.breadcrumbs__items ul li {
+  position: relative;
+  padding-right: 7px;
+  margin-right: 7px;
+  display: inline-block;
+  vertical-align: middle;
+}
+.breadcrumbs__items ul li:after {
+  content: url(../img/arrow_right.svg);
+  position: absolute;
+  right: -6px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 16px;
+  color: rgba(37, 52, 79, 0.5);
+}
+.breadcrumbs__items ul li:last-child:after {
+  display: none;
+}
+.breadcrumbs__items ul img {
+  line-height: 1;
+  vertical-align: bottom;
+}
+.breadcrumbs__items ul span {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  /* identical to box height */
+
+  color: #535a67;
+}
+.breadcrumbs__items ul a span {
+  line-height: 16px;
+  color: rgba(83, 90, 103, 0.4);
+
+  &:hover {
+    color: rgba(83, 90, 103, 1);
+  }
+}
+.pageheader__type2 {
+  margin-bottom: 26px;
+}
+
+.dropdownblock {
+  position: absolute;
+  top: calc(100% + 5px);
+  min-width: 180px;
+  display: none;
+}
+
+.dropdownblock.active {
+  display: block;
+  z-index: 999;
+}
+
+.dropdownblock__wrapper {
+  background: #ffffff;
+  -webkit-box-shadow: 5px 5px 60px rgba(36, 40, 43, 0.1);
+  box-shadow: 5px 5px 60px rgba(36, 40, 43, 0.1);
+  border-radius: 6px;
+  padding: 15px 15px;
+}
+
+.fdropdown__item {
+  margin-bottom: 10px;
+}
+
+.fdropdown__button {
+  cursor: pointer;
+  * {
+    -webkit-transition: $transition;
+    -o-transition: $transition;
+    transition: $transition;
+  }
+
+  svg {
+    width: 10px;
+  }
+
+  span {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 19px;
+    color: #3a3a3a;
+    padding-right: 2px;
+  }
+}
+
+.fdropdown__button.active {
+  span {
+    color: #08105b;
+  }
+
+  svg {
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+}
+.fdropdown {
+  position: relative;
+}
+
+.dropdownpanel {
+  margin-bottom: 36px;
+  display: flex;
+  align-items: center;
+}
+.dropdownpanel__item {
+  margin-right: 38px;
+}
+
+a.dropdownpanel__link {
+  display: block;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+
+  color: #3a3a3a;
+}
+.catalogaside {
+  .cols_asideblock {
+    margin-right: 39px;
+  }
+}
+.productcard__img {
+  @include imagecenter(100%, width);
+}
+.cataloglist__items {
+  display: flex;
+  flex-wrap: wrap;
+  margin: -10px;
+  justify-content: flex-start;
+}
+.cataloglist__item {
+  margin: 10px;
+  flex: 1;
+  max-width: 302px;
+  .productcard {
+    height: 100%;
+    min-width: 302px;
+  }
+}
+
+.catalognav__pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
+
+.pagination__arrLeft {
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+
+.pagination {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.pagination > a {
+  height: 60px;
+  display: flex;
+  align-items: center;
+}
+
+.pagination ul {
+  display: inline-block;
+  padding: 0;
+  margin: 0 10px;
+}
+
+.pagination ul li {
+  float: left;
+  margin: 0 10px;
+  list-style: none;
+}
+
+.pagination ul li > span {
+  vertical-align: sub;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  opacity: 0.4;
+  height: 60px;
+  width: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #535a67;
+}
+
+.pagination ul li a {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+
+  color: #535a67;
+  text-align: center;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  height: 60px;
+  border: 2px solid #535a67;
+  border-radius: 15px;
+  min-width: 60px;
+  opacity: 0.4;
+}
+
+.pagination > span {
+  float: left;
+  display: block;
+  padding-right: 3px;
+}
+
+.pagination ul li.active a {
+  border-color: #08105b;
+  color: #08105b;
+  opacity: 1;
+}
+
+.pagination ul li a:hover {
+  border-color: #08105b;
+  color: #08105b;
+  opacity: 1;
+}
+
+.paginationblock {
+  padding: 24px 0;
+}
+
+.pagination__content {
+  margin: auto;
+}
+/* .cataloglist__items {
+  margin-bottom: 20px;
+} */
+.catalognav {
+  margin: 30px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.showmorelink {
+  min-width: 302px;
+}
+
+.productslider__wrapper__inner {
+  .productslider__container {
+    padding: 0 !important;
+  }
+}
+.container .container {
+  padding: 0;
+}
+.blockheader {
+  position: relative;
+}
+
+.sliderarrows {
+  display: flex;
+  flex-wrap: nowrap;
+}
+.sliderarrow {
+  position: initial;
+  transform: none;
+
+  margin-left: 10px;
+}
+.catalogrelated {
+  .sliderarrows {
+    display: none;
+  }
+}
+
+.seoblock__text {
+  ul {
+    @include clear;
+    margin-bottom: 25px;
+    li {
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 19px;
+      margin-bottom: 15px;
+      color: #3a3a3a;
+
+      padding-left: 40px;
+      background-image: url(../img/listcheck.svg);
+      background-position: left top;
+      background-repeat: no-repeat;
+    }
+  }
+}
+
+.fitchesblock_col3 {
+  .fitchesblock__item {
+    width: calc(100% / 3);
+  }
+}
+.fitchesblock_notext {
+  .fitchesblock__wrapper {
+    display: flex;
+    align-items: center;
+  }
+  .fitchesblock__header {
+    height: 60px;
+  }
+}
+p,
+.text ul {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  margin: 0 0 20px 0;
+  color: #3a3a3a;
+}
+.textcontainer {
+  max-width: 869px;
+}
+.cataloglinks {
+  width: 100%;
+}
+.cataloglinks {
+  margin-bottom: 38px;
+}
+.cataloglinks__menu {
+  opacity: 0;
+}
+.cataloglinks__menu.dm-menu_item-subindicator {
+  opacity: 1;
+  background: none;
+  ul {
+    li {
+      margin-right: 20px;
+      a {
+        display: block;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 16px;
+        height: 55px;
+        color: #3a3a3a;
+        background: #f9f9f9;
+        border-radius: 15px;
+        padding: 18px;
+        white-space: nowrap;
+        border: 2px solid #f9f9f9;
+        &:hover {
+          border: 2px solid #08105b;
+          background: #fff;
+          color: #08105b;
+        }
+      }
+    }
+  }
+}
+.dm-menu_submenu li:hover > ul {
+  display: block;
+}
+.dm-menu_item-subindicator > ul > .dm-item_parent > a:before,
+.dm-menu_item-subindicator > ul > .dm-item_parent > span:before {
+  display: none;
+}
+.dm-menu > ul > li > span {
+  display: block;
+  cursor: pointer;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  height: 55px;
+  line-height: 55px;
+  color: #3a3a3a;
+  background: #f9f9f9;
+  border-radius: 15px;
+  padding: 0 18px;
+  white-space: nowrap;
+  border: 2px solid #f9f9f9;
+  &:hover {
+    border: 2px solid #08105b;
+    background: #fff;
+    color: #08105b;
+  }
+}
+.dm-menu_submenu li ul {
+  z-index: 999;
+}
+.dm-item_submenu-overflow ul li {
+  margin-right: 0 !important;
+}
+.dm-item_submenu-overflow ul li a {
+  background: none !important;
+  margin-right: 0 !important;
+  border: none !important;
+}
+a.dropdownpanel__link {
+  white-space: nowrap;
+}
+.fdropdown__button {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+}
+
+.catalogrelated {
+  .productslider__container {
+    width: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
+  }
+  .productslider__slider {
+    display: flex;
+    margin: -5px;
+  }
+  .productslider__slide {
+    margin: 5px;
+  }
+}
+.catalogpage__main {
+  width: calc(100% - 324px);
+}
 @include large-screen {
   [data-slidercontainer] {
     padding: 0 60px;
@@ -3307,6 +3771,22 @@ input {
   .blogcard__mask {
     border-radius: 15px;
   }
+  .cataloglist__item .productcard {
+  }
+  .pagination ul li > span,
+  .pagination ul li a {
+    width: 50px;
+    height: 50px;
+  }
+  .showmorelink {
+    min-width: unset;
+  }
+  .pagination ul li a {
+    min-width: 50px;
+  }
+  .cataloglist__item .productcard {
+    min-width: unset;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -3322,6 +3802,11 @@ input {
   /*  * {
     flex-wrap: wrap;
   } */
+  .catalogrelated {
+    .sliderarrows {
+      display: block;
+    }
+  }
 
   .reviewsblock__item {
     width: 100%;
