--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -480,7 +480,7 @@
                           </div>
                           <div class="productcard__content">
                             <div class="productcard__title">
-                              <a href="/catalog/product/kolbasa_syrokopchenaya_palermo/" tabindex="0">Консерв солянка
+                              <a href="#" tabindex="0">Консерв солянка
                                 из&nbsp;осетра</a>
                             </div>
                             <div class="productcard__params">
@@ -570,7 +570,7 @@
                           </div>
                           <div class="productcard__content">
                             <div class="productcard__title">
-                              <a href="/catalog/product/kolbasa_syrokopchenaya_palermo/" tabindex="0">Рыба масляная х/к
+                              <a href="#" tabindex="0">Рыба масляная х/к
                                 в/у филе-кусок с кожей</a>
                             </div>
                             <div class="productcard__params">
@@ -656,7 +656,7 @@
                           </div>
                           <div class="productcard__content">
                             <div class="productcard__title">
-                              <a href="/catalog/product/kolbasa_syrokopchenaya_palermo/" tabindex="0">Консерв солянка
+                              <a href="#" tabindex="0">Консерв солянка
                                 из&nbsp;осетра</a>
                             </div>
                             <div class="productcard__params">
@@ -745,7 +745,7 @@
                           </div>
                           <div class="productcard__content">
                             <div class="productcard__title">
-                              <a href="/catalog/product/kolbasa_syrokopchenaya_palermo/" tabindex="0">Консерв солянка
+                              <a href="#" tabindex="0">Консерв солянка
                                 из&nbsp;осетра</a>
                             </div>
                             <div class="productcard__params">
@@ -834,7 +834,7 @@
                           </div>
                           <div class="productcard__content">
                             <div class="productcard__title">
-                              <a href="/catalog/product/kolbasa_syrokopchenaya_palermo/" tabindex="0">Консерв солянка
+                              <a href="#" tabindex="0">Консерв солянка
                                 из&nbsp;осетра</a>
                             </div>
                             <div class="productcard__params">
@@ -994,7 +994,7 @@
                           </div>
                           <div class="productcard__content">
                             <div class="productcard__title">
-                              <a href="/catalog/product/kolbasa_syrokopchenaya_palermo/" tabindex="0">Консерв солянка
+                              <a href="#" tabindex="0">Консерв солянка
                                 из&nbsp;осетра</a>
                             </div>
                             <div class="productcard__params">
@@ -1083,7 +1083,7 @@
                           </div>
                           <div class="productcard__content">
                             <div class="productcard__title">
-                              <a href="/catalog/product/kolbasa_syrokopchenaya_palermo/" tabindex="0">Рыба масляная х/к
+                              <a href="#" tabindex="0">Рыба масляная х/к
                                 в/у филе-кусок с кожей</a>
                             </div>
                             <div class="productcard__params">
@@ -1172,7 +1172,7 @@
                           </div>
                           <div class="productcard__content">
                             <div class="productcard__title">
-                              <a href="/catalog/product/kolbasa_syrokopchenaya_palermo/" tabindex="0">Консерв солянка
+                              <a href="#" tabindex="0">Консерв солянка
                                 из&nbsp;осетра</a>
                             </div>
                             <div class="productcard__params">
@@ -1261,7 +1261,7 @@
                           </div>
                           <div class="productcard__content">
                             <div class="productcard__title">
-                              <a href="/catalog/product/kolbasa_syrokopchenaya_palermo/" tabindex="0">Консерв солянка
+                              <a href="#" tabindex="0">Консерв солянка
                                 из&nbsp;осетра</a>
                             </div>
                             <div class="productcard__params">
@@ -1350,7 +1350,7 @@
                           </div>
                           <div class="productcard__content">
                             <div class="productcard__title">
-                              <a href="/catalog/product/kolbasa_syrokopchenaya_palermo/" tabindex="0">Консерв солянка
+                              <a href="#" tabindex="0">Консерв солянка
                                 из&nbsp;осетра</a>
                             </div>
                             <div class="productcard__params">
@@ -1511,7 +1511,7 @@
                           </div>
                           <div class="productcard__content">
                             <div class="productcard__title">
-                              <a href="/catalog/product/kolbasa_syrokopchenaya_palermo/" tabindex="0">Консерв солянка
+                              <a href="#" tabindex="0">Консерв солянка
                                 из&nbsp;осетра</a>
                             </div>
                             <div class="productcard__params">
@@ -1600,7 +1600,7 @@
                           </div>
                           <div class="productcard__content">
                             <div class="productcard__title">
-                              <a href="/catalog/product/kolbasa_syrokopchenaya_palermo/" tabindex="0">Рыба масляная х/к
+                              <a href="#" tabindex="0">Рыба масляная х/к
                                 в/у филе-кусок с кожей</a>
                             </div>
                             <div class="productcard__params">
@@ -1689,7 +1689,7 @@
                           </div>
                           <div class="productcard__content">
                             <div class="productcard__title">
-                              <a href="/catalog/product/kolbasa_syrokopchenaya_palermo/" tabindex="0">Консерв солянка
+                              <a href="#" tabindex="0">Консерв солянка
                                 из&nbsp;осетра</a>
                             </div>
                             <div class="productcard__params">
@@ -1778,7 +1778,7 @@
                           </div>
                           <div class="productcard__content">
                             <div class="productcard__title">
-                              <a href="/catalog/product/kolbasa_syrokopchenaya_palermo/" tabindex="0">Консерв солянка
+                              <a href="#" tabindex="0">Консерв солянка
                                 из&nbsp;осетра</a>
                             </div>
                             <div class="productcard__params">
@@ -1867,7 +1867,7 @@
                           </div>
                           <div class="productcard__content">
                             <div class="productcard__title">
-                              <a href="/catalog/product/kolbasa_syrokopchenaya_palermo/" tabindex="0">Консерв солянка
+                              <a href="#" tabindex="0">Консерв солянка
                                 из&nbsp;осетра</a>
                             </div>
                             <div class="productcard__params">
@@ -2105,7 +2105,7 @@
                     <path d="M1 7.5L4 4.5L1 1.5" stroke="#08105B" stroke-width="1.5" stroke-linecap="round" />
                   </svg>
                 </a><!-- /.reviewsblock__all -->
-                <a href="#" class="reviewsblock__add btn__border">Оставить свой отзыв</a><!-- /.btn__border -->
+                <a href="#" class="reviewsblock__add btn_border">Оставить свой отзыв</a><!-- /.btn__border -->
               </div><!-- /.reviewsblock__nav -->
             </div><!-- /.reviewsblock -->
           </div>
