--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1169,10 +1169,6 @@ h2 {
   fill: $orange;
 }
 
-.flex.content-between {
-  color: #ff1d1d;
-}
-
 .productcard__stickers {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3607,6 +3603,41 @@ p,
     }
   }
 }
+.pageheader__right {
+  .cataloglinks {
+    margin-bottom: 0;
+  }
+  .cataloglinks__menu {
+    opacity: 1;
+    background: none;
+    ul {
+      display: flex;
+      align-items: center;
+      @include clear;
+      li {
+        margin-right: 20px;
+        a {
+          display: block;
+          font-style: normal;
+          font-weight: 600;
+          font-size: 16px;
+          height: 55px;
+          color: #3a3a3a;
+          background: #f9f9f9;
+          border-radius: 15px;
+          padding: 18px;
+          white-space: nowrap;
+          border: 2px solid #f9f9f9;
+          &:hover {
+            border: 2px solid #08105b;
+            background: #fff;
+            color: #08105b;
+          }
+        }
+      }
+    }
+  }
+}
 .dm-menu_submenu li:hover > ul {
   display: block;
 }
@@ -3672,7 +3703,137 @@ a.dropdownpanel__link {
 .catalogpage__main {
   width: calc(100% - 324px);
 }
+.pageheader__left {
+  h1 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 44px;
+    /* identical to box height */
+    margin: 0;
+    color: #3a3a3a;
+  }
+}
+
+.pagelinktab {
+  margin: 38px 0;
+  ul {
+    @include clear;
+    display: flex;
+    width: 100%;
+    li {
+      flex: 1;
+      a {
+        display: block;
+        padding: 25px 32px;
+        border-bottom: 3px solid #e1e1e1;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 24px;
+        text-align: center;
+        color: rgba(83, 90, 103, 0.4);
+        height: 100%;
+
+        &.active,
+        &:hover {
+          color: #08105b;
+          border-color: #08105b;
+        }
+      }
+    }
+  }
+}
+
+.blogpage {
+  .videoslider__cols {
+    margin: 0 -10px;
+  }
+  .videoslider_col_aside {
+    padding: 10px;
+  }
+  .videoslider__col_main {
+    height: unset;
+    padding: 10px;
+    width: 66.4%;
+
+    .videoslider__video {
+      padding: 0;
+    }
+  }
+  .videoslider__video {
+    margin-bottom: 20px;
+    padding: 0;
+  }
+  .videoslider_col_aside {
+    width: 33.3%;
+
+    .blogcard__item {
+      height: 250px;
+    }
+  }
+}
+
+.blogpage__item {
+  margin-bottom: 60px;
+}
+
+.blogslider__items {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -10px;
+
+  .blogslider__item {
+    width: 33.3%;
+    padding: 0 10px;
+  }
+}
+.blogpage__item:last-child {
+  margin-bottom: 0;
+}
+
+.blognav {
+  justify-content: center;
+  .showmorelink {
+    min-width: 230px;
+  }
+}
+.blogpage {
+  margin-bottom: 120px;
+}
+.pagelinktab ul li a {
+  white-space: nowrap;
+}
 @include large-screen {
+  .pagelinktab ul li a {
+    font-size: 16px;
+    padding: 15px;
+  }
+  .blogpage .videoslider__col_main {
+    min-width: 66.4%;
+  }
+  .blogpage .videoslider__col_main {
+    flex: 1;
+  }
+  .blogpage .videoslider_col_aside {
+    flex: 1;
+    margin: -10px 0;
+    .videoslider__video {
+      margin-bottom: 0;
+      padding: 10px 0;
+    }
+  }
+  .blogpage .videoslider__video {
+    height: 50%;
+  }
+  .blogpage .videoslider_col_aside .blogcard__item {
+    height: 100%;
+  }
+  .blogpage {
+    .videoslider__col_main .blogcard__img {
+      background-position: center;
+    }
+  }
   [data-slidercontainer] {
     padding: 0 60px;
   }
@@ -4881,6 +5042,38 @@ a.dropdownpanel__link {
   .mainslide__wrapperMobile {
     width: 100%;
     background-size: cover;
+  }
+  .pageheader.flex.items-center.content-between {
+    flex-wrap: wrap;
+    .cataloglinks {
+      width: 100%;
+      margin-top: 20px;
+    }
+  }
+  .pagelinktab {
+    margin: 20px 0;
+    width: 100%;
+    overflow-x: auto;
+  }
+  .blogpage {
+    .videoslider__cols {
+      flex-wrap: wrap;
+    }
+    .videoslider__col_main {
+      flex: unset;
+      width: 100%;
+    }
+    .videoslider_col_aside {
+      flex: unset;
+      width: 100%;
+      flex-wrap: wrap;
+      .videoslider__video {
+        height: 190px;
+      }
+    }
+    .videoslider__col_main {
+      height: 190px;
+    }
   }
 }
 
