--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5055,7 +5055,7 @@ a.dropdownpanel__link {
     width: 100%;
     overflow-x: auto;
   }
-  .blogpage {
+  /* .blogpage {
     .videoslider__cols {
       flex-wrap: wrap;
     }
@@ -5072,13 +5072,168 @@ a.dropdownpanel__link {
       }
     }
     .videoslider__col_main {
-      height: 190px;
+      height: unset;
+      .videoslider__video {
+        height: 190px;
+      }
     }
+  }
+  .blogslider__items {
+    flex-wrap: wrap;
+  } */
+  /* .blogslider__items .blogslider__item {
+    width: 100%;
+     height: 187px;
+     margin-bottom: 20px;
+     width: 310px;
+  }
+  .blogpage__item {
+    margin-bottom: 0px;
+  }
+  .blogpage .videoslider__col_main .videoslider__video, .blogpage .videoslider_col_aside .videoslider__video {
+   padding: 0;
+   margin-bottom: 20px;
+  }
+  .blogslider__items .blogslider__item {
+
+  }
+  .blogpage .videoslider_col_aside {
+    padding: 0;
+    margin: 0;
+  }
+  .blogpage .videoslider__col_main .videoslider__video {
+    margin-bottom: 20px;
+  }
+  .blogpage .videoslider__col_main {
+    padding: 0;
+    .videoslider__video  {
+      margin-bottom: 20px;
+    }
+
+  }
+  .blogslider__items .blogslider__item {
+    padding: 0;
+  } */
+
+  .blogpage {
+    .blogcard__info,
+    .videoslider_col_aside .blogcard__info {
+      left: 10px;
+      bottom: 10px;
+    }
+    .videoslider__cols {
+      flex-wrap: wrap;
+    }
+    .videoslider__video {
+      width: 100%;
+    }
+
+    .blogcard_type2 .blogcard__name {
+      font-size: 14px;
+      line-height: 17px;
+    }
+    .videoslider_col_aside {
+      flex: unset;
+      flex-wrap: wrap;
+      padding: 0;
+      margin: 0;
+      .videoslider__video {
+        height: unset;
+        margin: 0;
+        padding: 0 10px;
+        max-height: 160px;
+      }
+    }
+    .videoslider__col_main {
+      padding: 0;
+      height: unset;
+
+      .videoslider__video {
+        height: unset;
+        padding: 0 10px;
+        margin: 0;
+        max-height: 160px;
+      }
+    }
+  }
+  .blogslider__items {
+    flex-wrap: wrap;
+  }
+  .blogpage__item {
+    margin-bottom: 20px;
+  }
+  .blogpage .videoslider__col_main {
+    width: 33.3%;
+    min-width: 33.3%;
+  }
+  .blogpage .videoslider_col_aside {
+    width: 66.7%;
+  }
+  .blogpage .videoslider_col_aside .videoslider__video {
+    width: 50%;
+  }
+  .blogpage .videoslider__col_main .blogcard__img {
+    padding-top: 66%;
   }
 }
 
 @include small-screen {
+  .container {
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+  }
   .mainslide__wrapperMobile {
     background-size: contain;
+  }
+  .blogpage .videoslider__col_main .videoslider__video {
+    height: unset;
+    max-height: unset;
+    margin-bottom: 20px;
+  }
+  .blogpage .videoslider_col_aside .videoslider__video {
+    height: unset;
+    width: 100%;
+  }
+  .blogpage .videoslider__col_main .blogcard__img {
+    padding-top: 66%;
+  }
+  .blogpage .videoslider_col_aside .videoslider__video {
+    margin-bottom: 20px;
+  }
+  .blogpage .videoslider_col_aside .videoslider__video {
+    padding: 0;
+    width: 100%;
+  }
+  .blogpage .videoslider__col_main .videoslider__video {
+    padding: 0;
+    width: 100%;
+  }
+  .blogpage .videoslider_col_aside {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+  }
+  .blogpage .videoslider__col_main {
+    padding: 0;
+    width: 100%;
+  }
+  .blogpage .videoslider_col_aside .videoslider__video {
+    margin-right: 0;
+    max-height: unset;
+  }
+  .blogpage .blogslider__items .blogslider__item {
+    width: 100%;
+    padding: 0;
+    margin-bottom: 20px;
+  }
+  .blogpage__item {
+    margin-bottom: 0;
+  }
+  .blogpage .videoslider__cols {
+    margin: 0;
+  }
+  .blogslider__items {
+    margin: 0;
   }
 }
