--- a/src/html/views/blog.html
+++ b/src/html/views/blog.html
@@ -36,8 +36,7 @@
             </div>
 
           </div>
-        </div><!-- /.catalogheader -->
-
+        </div>
 
 
         <div class="pagelinktab">
