--- a/src/scss/partials/_classes.scss
+++ b/src/scss/partials/_classes.scss
@@ -47,6 +47,13 @@ a {
 .w-20 {
   width: 20%;
 }
+.mt-100 {
+  margin-top: 100px;
+}
+
+.mb-100 {
+margin-bottom: 100px;
+}
 
 @media (max-width: 1023px) {
   .mobile-full {
