--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4503,6 +4503,364 @@ padding: 12px 9px 14px;
   margin: 10px;
 }
 
+
+
+
+
+.orderblock__item {
+ 
+  margin-bottom: 49px;
+}
+
+.orderblock {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.orderblock__main {
+  margin-right: 58px;
+  width: calc(100% - 530px);
+}
+
+.orderblock__aside {
+  min-width: 530px;
+  max-width: 530px;
+}
+.infocard__title {
+  font-style: normal;
+font-weight: 700;
+font-size: 36px;
+line-height: 44px;
+/* identical to box height */
+margin-bottom: 28px;
+
+color: #3A3A3A;
+}
+
+.radioinput {
+  display: flex;
+}
+.formcheckbox {
+  position: relative;
+  padding-left: 31px;
+  cursor: pointer;
+}
+.formcheckbox .checkmark {
+  
+  border: 1px solid #BABDC2;
+  border-radius: 50%;
+  height: 14px;
+  left: 0;
+  position: absolute;
+  top: 4px;
+  width: 14px;
+}
+.formcheckbox .checkmark:after {
+  border-radius: 50%;
+ content: "";
+ height: 8px;
+ left: 2px;
+ position: absolute;
+ top: 2px;
+ width: 8px;
+ display: none;
+background: #F6874D;
+}
+.formcheckbox input:checked~.checkmark:after {
+  display: block;
+}
+
+.formcheckbox input {
+  cursor: pointer;
+  height: 0;
+  opacity: 0;
+  position: absolute;
+  width: 0;
+}
+
+.ordeform__inputcontent {
+}
+.orderform__name {
+  font-style: normal;
+  font-weight: 400;
+
+font-size: 20px;
+line-height: 24px;
+display: block;
+color: #3A3A3A;
+}
+.orderform__tedt {
+  font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 22px;
+/* identical to box height */
+margin-top: 10px;
+display: block;
+color: #535A67;
+margin-bottom: 15px;
+opacity: 0.4;
+}
+.orderform__input {
+  margin-bottom: 15px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+.formcheckbox input:checked~.ordeform__inputcontent .orderform__name {
+  font-weight: 600;
+ }
+
+
+ .orderform__block {
+  margin-bottom: 49px;
+ }
+.formblock__input {
+  margin-bottom: 20px;
+}
+
+
+.check label {
+  cursor: pointer;
+  display: inline-block;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  margin-bottom: 13px;
+  color: rgba(83, 90, 103, 0.4);
+  padding-left: 29px;
+  position: relative; }
+
+.check input[type='checkbox'] {
+  display: none; }
+
+.check label a {
+  color: #25344F;
+  text-decoration: underline; }
+
+.check label a:hover {
+  text-decoration: none; }
+
+.check label:before {
+  background-color: #F6874D;
+  border-radius: 3px;
+  content: "";
+  height: 15px;
+  left: 0;
+  position: absolute;
+  width: 15px;
+  top: 3px;
+  }
+
+.check input[type='checkbox']:checked + label:before {
+  background-image: url(../img/checkbox_checked.svg);
+  background-repeat: no-repeat;
+  background-position: center; }
+
+  .btn_full {
+    width: 100%;
+  }
+.orderform__submit {
+  margin-top: 17px;
+}
+.orderform__block.formblock {
+  width: 530px;
+  max-width: 100%;
+}
+.carttotal {
+  background: #F9F9F9;
+border-radius: 15px;
+padding: 26px 30px;
+}
+
+.carttotal__title {
+  font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 24px;
+margin-bottom: 26px;
+color: #3A3A3A;
+}
+
+.carttotal__products {
+}
+.carttotal__product {
+  margin-bottom: 30px;
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+.carttotal__items {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.carttotal__item {
+}
+.carttotal__item_count {
+  min-width: 50px;
+  max-width: 50px;
+}
+.carttotal__item_image {
+  min-width: 234px;
+  max-width: 234px;
+  font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 17px;
+/* identical to box height */
+
+
+color: #3A3A3A;
+}
+.carttotal__item_count {
+  min-width: 90px;
+  max-width: 90px;
+  text-align: center;
+  font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 17px;
+white-space: nowrap;
+/* identical to box height */
+
+
+color: #3A3A3A;
+}
+.carttotal__item_price {
+  min-width: 90px;
+  max-width: 90px;
+  text-align: right;
+  font-style: normal;
+font-weight: 400;
+font-size: 14px;white-space: nowrap;
+line-height: 17px;
+/* identical to box height */
+
+
+color: #3A3A3A;
+}
+.carttotal__product {
+  .cartproduct__title a {
+    font-size: 14px;
+    line-height: 17px;
+    font-weight: 600;
+margin-bottom: 4px;
+  } 
+  .cartproduct__param {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+  }
+  .cartproduct__image {
+    max-width: 60px;
+    min-width: 60px;
+    height: 60px;
+  }
+  .cartproduct .productcard__stickers {
+    transform: scale(0.48);
+  }
+  .productsticker {
+    font-size: 20px;
+  }
+  .productcard__stickers {
+    left: -24px;
+    top: -26px;
+  }
+}
+
+.product-params {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.product-params li {
+  margin-bottom: 15px;
+  display: flex;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.product-params span {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  /* identical to box height */
+  
+  
+  color: #3A3A3A;
+  text-align: left;
+}
+
+span.product-params_left {
+  width: 100%;
+  display: inline;
+  float: left;
+  padding: 5px 0;
+  white-space: nowrap;
+}
+
+span.product-params_left>span {
+  border-bottom: 1px dashed;
+  border-color: rgba(83, 90, 103, 0.4);
+  width: 100%;
+  display: inherit;
+}
+
+span.product-params_left>span>span {
+  padding-right: 5px;
+  position: relative;
+  bottom: -4px;
+  background: #f9f9f9;
+  font-size: 14px;
+  white-space: nowrap;
+}
+
+span.product-params_right {
+  float: left;
+  /* width: 100%; */
+  /* max-width: 300px; */
+  text-align: left;
+  position: relative;
+  bottom: -4px;
+  padding: 5px;
+
+  white-space: nowrap;
+  font-weight: 700;
+}
+.carttotal__products {
+  margin-bottom: 36px;
+}
+.carttotal__message {
+  font-weight: 600;
+font-size: 12px;
+line-height: 15px;
+/* identical to box height */
+margin: 9px 0;
+
+color: #3A3A3A;
+}
+@media (min-width: 1024px) {
+.sticky {
+    position: fixed;
+    top: 55px;
+    z-index: 999;
+    height: auto;
+}
+.stop {
+  position: relative;
+  z-index: 101;
+}
+}
 @include large-screen {
   .cartsummary {
     padding: 30px;
@@ -4649,6 +5007,45 @@ padding: 12px 9px 14px;
   }
   .pagination ul li a {
     min-width: 50px;
+  }
+  .orderblock {
+    flex-wrap: wrap;
+
+    > * {
+      width: 100%;
+      max-width: 100%;
+      min-width: 100%;
+    }
+  }
+  .infocard__title {
+    font-size: 22px;
+    line-height: 1.2;
+    margin-bottom: 20px;
+  }
+  .orderform__name {
+    font-size: 18px;
+    line-height: 1.2;
+  }
+  .orderform__tedt {
+    font-size: 16px;
+    line-height: 1.2;
+  }
+  .orderform__block {
+    margin-bottom: 30px;
+  }
+  .orderblock__aside  {
+    margin-bottom: 40px;
+  }
+  .carttotal__item_image {
+    max-width: 50%;
+    min-width: 50%;
+  }
+  .carttotal__item_count, .carttotal__item_price {
+    max-width: 25%;
+    min-width: 25%;
+  }
+  .carttotal {
+    padding: 25px 10px;
   }
 }
 
